--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -48,7 +48,7 @@ I acknowledge with respect the Coast Salish Peoples on whose traditional lands a
 
 ::: notes
 Keep cameras on and microphones on mute.
-If you are disconnected and having trouble reconnecting then 
+If you are disconnected and having trouble reconnecting then reach out to Lindsay, 
 :::
 
 ## Workshop Code of Conduct
@@ -62,5 +62,7 @@ Learn more: [Standards of Conduct for BC Public Service employees](https://www2.
 :::
 
 ::: notes
-Include talk about how teaching virtual is hard – never taught this one before virtually (have taught variants before) – stick with us!
+Teaching and learning in a virtual environment is hard. Lindsay is the only one of us who as taught this workshop before virtually (have taught variants before) – stick with us!
+
+While much of the course is concept-based and fairly high-level, it is still technical and you can fall behind and find it hard to catch up if you're multitasking.  So we ask you to remaim present and engaged to the best of your abilites and stick it out, even through the boring parts.  Your hard-work will pay off!
 :::
